fix: safety add getSensitiveWordTable interface
